修改记事权限，记事接口参数，学生动态增加已读，云盘主页去掉一些元素

--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -175,7 +175,7 @@
 						</a>-->
 						<a id="controladd" class="mui-control-item" style="width: 40px;">
 						</a>
-						<div class="mui-icon mui-icon-plus addqun" style="position: absolute;border: 0px solid #ddd;font-size: 25px;color: #C7C7CC;right: 0px;"></div>
+						<!--<div class="mui-icon mui-icon-plus addqun" style="position: absolute;border: 0px solid #ddd;font-size: 25px;color: #C7C7CC;right: 0px;"></div>-->
 					</div>
 				</div>
 			</div>
@@ -229,7 +229,7 @@
 		<script type="text/javascript">
 			mui.init({
 				gestureConfig: {
-					longtap: true, //默认为false
+					//longtap: true, //默认为false
 				}
 			});
 			mui.plusReady(function() {
@@ -250,57 +250,58 @@
 				//-------------------------
 
 				//---获取群数据---start---
-				//9.获取用户群
-				//获取个人信息
-				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
-				//需要参数
-				var getQunData = {
-					vtp: 'cg', //要获取的项:cg(创建的群),ug(参与群),mg(协管的群),ag(所有的群)
-					vvl: personalUTID, //查询的各项，对应人的utid，可以是查询的任何人
-				};
-				// 等待的对话框
-				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-				postDataPro_PostGList(getQunData, wd, function(data) {
-					console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-					if(data.RspCode == 0) {
-						//获取到数据
-						console.log('获取群数据成功');
-						document.getElementById("noqun").style.display = 'none';
-						document.getElementById("linewhite").style.display = 'inline';
-						document.getElementById("lineblue").style.display = 'inline';
-						document.body.querySelector('.mui-slider').style.display = 'inline';
-						//参数名	名称	参数类型	长度	是否加密	备注
-						//gid	群ID	int		否
-						//gname	群名	string		否	群名称
-						//gimg	群头像	string		否	群头像的链接
-						//mstype	用户管理角色	int		否	0家长,1管理员,2老师,3学生
-						mui.each(data.RspData, function(index, item) {
-							console.log('data.RspData:' + item.gname);
-							var qun = {
-								gid: item.gid,
-								gname: item.gname,
-								gimg: item.gimg,
-								mstype:item.mstype
-							}
-							var hasGetMember = {
-								hasGetMem: false //记录是否已获得群成员
-							};
-							mui.extend(qun, hasGetMember); //合并两个对象
-							qunList.push(qun);
-							addQun(qun);
-						});
-						getMember(qunList[0].gid); //通过群ID获取群的正常用户
-					} else {
-						mui.toast(data.RspTxt);
-						//未获取到数据
-						document.getElementById("noqun").style.display = 'inline';
-						document.getElementById("noqun").style.textAlign = "center";
-						document.getElementById("linewhite").style.display = 'none';
-						document.getElementById("lineblue").style.display = 'none';
-						document.body.querySelector('.mui-slider').style.display = 'none';
-					}
-					wd.close();
-				});
+				getQunMem(); //获取群
+				//				//9.获取用户群
+				//				//获取个人信息
+				//				var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+				//				//需要参数
+				//				var getQunData = {
+				//					vtp: 'cg', //要获取的项:cg(创建的群),ug(参与群),mg(协管的群),ag(所有的群)
+				//					vvl: personalUTID, //查询的各项，对应人的utid，可以是查询的任何人
+				//				};
+				//				// 等待的对话框
+				//				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				//				postDataPro_PostGList(getQunData, wd, function(data) {
+				//					console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+				//					if(data.RspCode == 0) {
+				//						//获取到数据
+				//						console.log('获取群数据成功');
+				//						document.getElementById("noqun").style.display = 'none';
+				//						document.getElementById("linewhite").style.display = 'inline';
+				//						document.getElementById("lineblue").style.display = 'inline';
+				//						document.body.querySelector('.mui-slider').style.display = 'inline';
+				//						//参数名	名称	参数类型	长度	是否加密	备注
+				//						//gid	群ID	int		否
+				//						//gname	群名	string		否	群名称
+				//						//gimg	群头像	string		否	群头像的链接
+				//						//mstype	用户管理角色	int		否	0家长,1管理员,2老师,3学生
+				//						mui.each(data.RspData, function(index, item) {
+				//							console.log('data.RspData:' + item.gname);
+				//							var qun = {
+				//								gid: item.gid,
+				//								gname: item.gname,
+				//								gimg: item.gimg,
+				//								mstype: item.mstype
+				//							}
+				//							var hasGetMember = {
+				//								hasGetMem: false //记录是否已获得群成员
+				//							};
+				//							mui.extend(qun, hasGetMember); //合并两个对象
+				//							qunList.push(qun);
+				//							addQun(qun);
+				//						});
+				//						getMember(qunList[0].gid); //通过群ID获取群的正常用户
+				//					} else {
+				//						mui.toast(data.RspTxt);
+				//						//未获取到数据
+				//						document.getElementById("noqun").style.display = 'inline';
+				//						document.getElementById("noqun").style.textAlign = "center";
+				//						document.getElementById("linewhite").style.display = 'none';
+				//						document.getElementById("lineblue").style.display = 'none';
+				//						document.body.querySelector('.mui-slider').style.display = 'none';
+				//					}
+				//					wd.close();
+				//				});
 				//---获取群数据---end---
 
 				//---创建群popover---start---
@@ -389,10 +390,10 @@
 
 				//切换显示选中的群
 				mui('#qunlist').on('tap', 'a', function() {
-					var close = mui('.icon-close');
-					mui.each(close, function(index, item) {
-						item.style.display = 'none';
-					});
+					//					var close = mui('.icon-close');
+					//					mui.each(close, function(index, item) {
+					//						item.style.display = 'none';
+					//					});
 					document.getElementById('bot_' + show).style.display = 'none';
 					console.log('qun:' + this.getAttribute('data-value'));
 					document.getElementById("bot_" + this.getAttribute('data-value')).style.display = 'inline';
@@ -410,22 +411,25 @@
 				//监听点击成员
 				mui('.mui-content').on('tap', '.mui-table-view-cell', function() {
 					console.log('mui-table-view-cell-id:' + this.getAttribute('id'));
-					console.log('mui-table-view-cell-utid:' + this.getAttribute('data-utid'));
 					console.log('mui-table-view-cell-gid:' + this.getAttribute('data-gid'));
-					var utid = this.getAttribute('data-utid');
-					var ugnick = this.getAttribute('data-ugnick');
-					var gid = this.getAttribute('data-gid');
+					console.log('mui-table-view-cell-stuid:' + this.getAttribute('data-stuid'));
+					console.log('mui-table-view-cell-stuname:' + this.getAttribute('data-stuname'));
+					var gid = this.getAttribute('data-gid'); //群id
+					var gname = ''; //群名称
+					var stuid = this.getAttribute('data-stuid'); //资料id
+					var stuname = this.getAttribute('data-stuname'); //学生姓名
 					mui.each(qunList, function(index, item) {
 						if(item.gid == gid) {
-							console.log('item:'+JSON.stringify(item));
-							if(item.mstype == '1' || item.mstype == '2') { //0家长,1管理员,2老师,3学生
-								//跳到点到记事
-								events.openNewWindowWithData('keeprecord_callorrecord_main.html', {
-									utid: utid,
-									ugnick: ugnick
-								});
-							}
+							gname = item.gname;
+							return false;
 						}
+					});
+					//跳到点到记事
+					events.openNewWindowWithData('keeprecord_callorrecord_main.html', {
+						gid: gid,
+						gname: gname,
+						stuid: stuid,
+						stuname: stuname
 					});
 				});
 
@@ -516,6 +520,134 @@
 				//---方法---start---
 
 				/**
+				 * 获取创建的群和协管的群
+				 */
+				function getQunMem() {
+					//9.获取用户群
+					//获取个人信息
+					var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+					//需要参数
+					var cgQunData = {
+						vtp: 'cg', //要获取的项:cg(创建的群),ug(参与群),mg(协管的群),ag(所有的群)
+						vvl: personalUTID, //查询的各项，对应人的utid，可以是查询的任何人
+					};
+					// 等待的对话框
+					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+					//获取创建的群
+					postDataPro_PostGList(cgQunData, wd, function(data) {
+						console.log('获取创建的群90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+						if(data.RspCode == 0) {
+							//获取到数据
+							//console.log('获取群数据成功');
+							//document.getElementById("noqun").style.display = 'none';
+							//document.getElementById("linewhite").style.display = 'inline';
+							//document.getElementById("lineblue").style.display = 'inline';
+							//document.body.querySelector('.mui-slider').style.display = 'inline';
+							//参数名	名称	参数类型	长度	是否加密	备注
+							//gid	群ID	int		否
+							//gname	群名	string		否	群名称
+							//gimg	群头像	string		否	群头像的链接
+							//mstype	用户管理角色	int		否	0家长,1管理员,2老师,3学生
+							mui.each(data.RspData, function(index, item) {
+								console.log('data.RspData:' + item.gname);
+								var qun = {
+									gid: item.gid,
+									gname: item.gname,
+									gimg: item.gimg,
+									mstype: item.mstype
+								}
+								var hasGetMember = {
+									hasGetMem: false //记录是否已获得群成员
+								};
+								mui.extend(qun, hasGetMember); //合并两个对象
+								qunList.push(qun);
+								//addQun(qun);
+							});
+							//getMember(qunList[0].gid); //通过群ID获取群的正常用户
+						} else {
+							//mui.toast(data.RspTxt);
+							//未获取到数据
+							//document.getElementById("noqun").style.display = 'inline';
+							//document.getElementById("noqun").style.textAlign = "center";
+							//document.getElementById("linewhite").style.display = 'none';
+							//document.getElementById("lineblue").style.display = 'none';
+							//document.body.querySelector('.mui-slider').style.display = 'none';
+						}
+						wd.close();
+
+						//获取协管的群
+						var mgQunData = {
+							vtp: 'mg', //要获取的项:cg(创建的群),ug(参与群),mg(协管的群),ag(所有的群)
+							vvl: personalUTID, //查询的各项，对应人的utid，可以是查询的任何人
+						};
+						// 等待的对话框
+						var wd2 = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+						postDataPro_PostGList(mgQunData, wd2, function(data2) {
+							console.log('获取协管的群90909090success:RspCode:' + data2.RspCode + ',RspData:' + JSON.stringify(data2.RspData) + ',RspTxt:' + data2.RspTxt);
+							if(data2.RspCode == 0) {
+								//获取到数据
+								//console.log('获取群数据成功');
+								//document.getElementById("noqun").style.display = 'none';
+								//document.getElementById("linewhite").style.display = 'inline';
+								//document.getElementById("lineblue").style.display = 'inline';
+								//document.body.querySelector('.mui-slider').style.display = 'inline';
+								//参数名	名称	参数类型	长度	是否加密	备注
+								//gid	群ID	int		否
+								//gname	群名	string		否	群名称
+								//gimg	群头像	string		否	群头像的链接
+								//mstype	用户管理角色	int		否	0家长,1管理员,2老师,3学生
+								mui.each(data2.RspData, function(index, item) {
+									console.log('data.RspData:' + item.gname);
+									var qun = {
+										gid: item.gid,
+										gname: item.gname,
+										gimg: item.gimg,
+										mstype: item.mstype
+									}
+									var hasGetMember = {
+										hasGetMem: false //记录是否已获得群成员
+									};
+									mui.extend(qun, hasGetMember); //合并两个对象
+									qunList.push(qun);
+									//addQun(qun);
+								});
+								//getMember(qunList[0].gid); //通过群ID获取群的正常用户
+							} else {
+								//mui.toast(data.RspTxt);
+								//未获取到数据
+								//document.getElementById("noqun").style.display = 'inline';
+								//document.getElementById("noqun").style.textAlign = "center";
+								//document.getElementById("linewhite").style.display = 'none';
+								//document.getElementById("lineblue").style.display = 'none';
+								//document.body.querySelector('.mui-slider').style.display = 'none';
+							}
+							if(qunList.length == 0) {
+								//未获取到数据
+								mui.toast('没有管理的群');
+								//document.getElementById("noqun").style.display = 'inline';
+								//document.getElementById("noqun").style.textAlign = "center";
+								document.getElementById("linewhite").style.display = 'none';
+								document.getElementById("lineblue").style.display = 'none';
+								document.body.querySelector('.mui-slider').style.display = 'none';
+							} else {
+								//获取到数据
+								console.log('获取群数据成功');
+								//document.getElementById("noqun").style.display = 'none';
+								document.getElementById("linewhite").style.display = 'inline';
+								document.getElementById("lineblue").style.display = 'inline';
+								document.body.querySelector('.mui-slider').style.display = 'inline';
+								mui.each(qunList, function(index, item) {
+									console.log('qunList:' + JSON.stringify(item));
+									addQun(item);
+								});
+								getMember(qunList[0].gid); //通过群ID获取群的正常用户
+							}
+							wd2.close();
+						});
+					});
+				}
+
+				/**
 				 * 群栏添加一个群，对应的成员栏添加默认界面
 				 * @param {Object} qun 群信息
 				 */
@@ -556,10 +688,10 @@
 											<div class="mui-row" style="margin-top: 8px;">';
 					//添加学生
 					var html2 = '';
-					html2 = '<li id="addmember_' + qun.gid + '" class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3 ">\
-							   		<div class="keep-box-shadow-border keep-member2 addmember" data-id="' + qun.gid + '">\
-										<img src="../../image/cloud/record_add.png" style="height: 30px;width: 30px;margin-top: 18px;" />\
-									</div></li>';
+					html2 = '<li id="addmember_' + qun.gid + '" class="mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3 "></li>';
+					//							   		<div class="keep-box-shadow-border keep-member2 addmember" data-id="' + qun.gid + '">\
+					//										<img src="../../image/cloud/record_add.png" style="height: 30px;width: 30px;margin-top: 18px;" />\
+					//									</div></li>';
 					var html3 = '</div></ul></div></div>';
 					div.innerHTML = html1 + html2 + html3;
 					document.body.querySelector('.mui-content').appendChild(div);
@@ -573,52 +705,54 @@
 				 */
 				function addMember(qunBot, addTable, member) {
 					var li = document.createElement('li');
-					var memId = 'member_' + member.utid; //
+					var memId = 'member_' + member.stuid; //
 					li.id = memId;
 					li.setAttribute('data-gid', member.gid);
-					li.setAttribute('data-utid', member.utid);
-					li.setAttribute('data-ugnick', member.ugnick);
+					li.setAttribute('data-stuid', member.stuid);
+					li.setAttribute('data-stuname', member.stuname);
 					li.className = 'mui-table-view-cell mui-media mui-col-xs-3 mui-col-sm-3';
 					//删除按钮
-					var html1 = '<div class="mui-icon iconfont icon-close" data-utid="' + member.utid + '" data-gid="' + member.gid + '" style="display: none;"></div>';
+					var html1 = '<div class="mui-icon iconfont icon-close" data-stuid="' + member.stuid + '" data-gid="' + member.gid + '" style="display: none;"></div>';
 					//成员,
-					var html2 = '<div class="keep-box-shadow-border keep-member" data-utid="' + member.utid + '" data-gid="' + member.gid + '" data-ugnick="' + member.ugnick + '">';
+					var html2 = '<div class="keep-box-shadow-border keep-member" data-stuid="' + member.stuid + '" data-gid="' + member.gid + '" data-stuname="' + member.stuname + '">';
 					//头像
 					var html3 = '';
 					if(member.uimg != null && member.uimg != '') {
-						html3 = '<img src="' + member.uimg + '" />';
+						html3 = '<img src="' + updateHeadImg(member.uimg, 2) + '" />';
 					} else {
 						html3 = '<img src="../../image/utils/default_personalimage.png" />';
 					}
 					//名称
-					var html4 = '<p class="mui-ellipsis">' + member.ugnick + '</p></div>';
+					var html4 = '<p class="mui-ellipsis">' + member.stuname + '</p></div>';
 					li.innerHTML = html1 + html2 + html3 + html4;
 					qunBot.insertBefore(li, addTable);
 				}
 
 				/**
-				 * 通过群ID获取群的正常用户
+				 * 通过群ID获取群的学生资料
 				 * @param {Object} qunId 群ID
 				 */
 				function getMember(qunId) {
-					//13.通过群ID获取群的正常用户
-					//需要参数
+					//16.通过群ID获取群对象资料
+					//所需参数
 					var getMemData = {
-						top: '-1', //选择条数,-1取全部
-						vvl: qunId, //群ID，查询的值
-						vvl1: '3', //群员类型，0家长,1管理员,2老师,3学生,-1取全部
+						top: '-1', //选择条数,-1为全部
+						vvl: qunId, //群ID,查询的值
+						vvl1: '3' //类型,0家长,1管理员,2老师,3学生,-1全部
 					};
+					//返回值model：model_groupStus
 					// 等待的对话框
 					var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-					postDataPro_PostGusers(getMemData, wd, function(data) {
+					postDataPro_PostGUInf(getMemData, wd, function(data) {
 						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-						//参数名	名称	参数类型	长度	是否加密	备注
-						//gid	群ID	int
-						//utid	用户tid	int
-						//ugname	用户在群昵称	string			用户在群里的备注名称
-						//ugnick	用户昵称	string			用户资料昵称
-						//uimg	用户头像	string			用户头像
-						//ugtp	用户在群类型	int			0家长,1管理员,2老师,3学生
+						//16.通过群ID获取群对象资料
+						//	mod.model_groupStus = {
+						//		gid:'',//群ID
+						//		stuid:'',//资料id
+						//		stuname:'',//名称
+						//		stuimg:'',//头像,头像地址
+						//		mstype:''//资料类型,0家长,1管理员,2老师,3学生
+						//	}
 						if(data.RspCode == 0) {
 							mui.each(data.RspData, function(index, item) {
 								console.log('getMemData:' + JSON.stringify(item));
